# iggy-cpp-client

./: .actrc  .clang-format  .gitignore  .lcovrc  .markdownlint.json  .pre-commit-config.yaml  .yamllint  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  CPPLINT.cfg  Doxyfile  FUZZING.md  README.md  SECURITY.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  install-vcpkg.sh  post-install.sh
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/linters/: .hadolint.yaml
.github/workflows/: ci.yml  devcontainer-ci.yml
cmake/modules/: CodeCoverage.cmake
docs/: CMakeLists.txt
examples/cli/: cli.cc  cli.h  iggy_cmd.cc
fuzz/: CMakeLists.txt  pub_client.cc
images/iggy-cpp-build/: README.md
images/iggy-cpp-build/.devcontainer/: Dockerfile  devcontainer.json
sdk/: binary.h  client.cc  client.h  command.h  iggy_cmd.cc  json.h  message.cc  message.h  model.cc  model.h  models.cc  models.h  protocol.h  serialization.cc  serialization.h  types.h  utils.cc  utils.h
sdk/net/: address.cc  address.h  conn.cc  conn.h  crypto.cc  crypto.h  iggy.cc  iggy.h  protocol.cc  protocol.h  tls.cc  tls.h  transport.h
sdk/net/crypto/: crypto.cc  crypto.h  ssl.cc  ssl.h
sdk/net/ssl/: crypto.cc  crypto.h  ssl.cc  ssl.h  ssl_engine.h
tests/: CMakeLists.txt  client_test.cc  crypto_test.cc  e2e_testutils.cc  e2e_testutils.h  iggy_protocol_provider_test.cc  message_test.cc  model_test.cc  models_test.cc  ping_cmd_test.cc  serialization_test.cc  ssl_test.cc  unit_testutils.cc  unit_testutils.h
tests/e2e/: e2e_testutils.cc  ping_cmd_test.cc  server.toml
tests/unit/: client_test.cc  crypto_test.cc  iggy_protocol_provider_test.cc  model_test.cc  serialization_test.cc  ssl_test.cc  unit_testutils.cc  unit_testutils.h
